--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1,9 +1,8 @@
 .Tabs {
     margin: 0;
     list-style: none;
-    display: flex;
-    align-items: center;
     height: 50px;
     background: #F5F5F5;
     padding: 10px 10px 0;
+    border-bottom: 1px solid #ddd;
 }
