--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -1,7 +1,7 @@
 .Messages {
     height: calc(100% - 100px);
     overflow-y: scroll;
-    padding-right: 15px;
+    padding: 0 15px;
     margin-top: 10px;
 }
 
